--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
     <!-- Vercel Analytics -->
     <script defer src="/_vercel/insights/script.js"></script>
+
+    <!-- Google AdSense - Replace ca-pub-XXXXXXX with your AdSense Publisher ID -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+      crossorigin="anonymous"
+    ></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
@@ -216,6 +223,27 @@
         </div>
       </div>
     </header>
+
+    <!-- Ad Banner -->
+    <div class="container mx-auto px-4 py-4">
+      <div
+        class="ad-container bg-gray-100 rounded-lg flex items-center justify-center"
+        style="min-height: 90px"
+      >
+        <!-- Replace with your AdSense ad unit code -->
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+          data-ad-slot="XXXXXXXXXX"
+          data-ad-format="horizontal"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+    </div>
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-12">
