--- a/index.html
+++ b/index.html
@@ -420,22 +420,22 @@
             <h5 class="text-lg font-bold mb-4">Resources</h5>
             <ul class="space-y-2">
               <li>
-                <a href="#" class="text-gray-400 hover:text-white"
+                <a href="https://iconscout.com/api" target="_blank" class="text-gray-400 hover:text-white"
                   >API Documentation</a
                 >
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-white"
+                <a href="/privacy.html" class="text-gray-400 hover:text-white"
                   >Privacy Policy</a
                 >
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-white"
+                <a href="/terms.html" class="text-gray-400 hover:text-white"
                   >Terms of Service</a
                 >
               </li>
               <li>
-                <a href="#" class="text-gray-400 hover:text-white">Contact</a>
+                <a href="mailto:contact@peeljoy.com" class="text-gray-400 hover:text-white">Contact</a>
               </li>
             </ul>
           </div>
