Add Google AdSense publisher ID

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- Vercel Analytics -->
     <script defer src="/_vercel/insights/script.js"></script>
 
-    <!-- Google AdSense - Replace ca-pub-XXXXXXX with your AdSense Publisher ID -->
+    <!-- Google AdSense -->
     <script
       async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6372549792429788"
       crossorigin="anonymous"
     ></script>
     <style>
@@ -230,13 +230,12 @@
         class="ad-container bg-gray-100 rounded-lg flex items-center justify-center"
         style="min-height: 90px"
       >
-        <!-- Replace with your AdSense ad unit code -->
         <ins
           class="adsbygoogle"
           style="display: block"
-          data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-          data-ad-slot="XXXXXXXXXX"
-          data-ad-format="horizontal"
+          data-ad-client="ca-pub-6372549792429788"
+          data-ad-slot="auto"
+          data-ad-format="auto"
           data-full-width-responsive="true"
         ></ins>
         <script>
@@ -420,7 +419,10 @@
             <h5 class="text-lg font-bold mb-4">Resources</h5>
             <ul class="space-y-2">
               <li>
-                <a href="https://iconscout.com/api" target="_blank" class="text-gray-400 hover:text-white"
+                <a
+                  href="https://iconscout.com/api"
+                  target="_blank"
+                  class="text-gray-400 hover:text-white"
                   >API Documentation</a
                 >
               </li>
@@ -435,7 +437,11 @@
                 >
               </li>
               <li>
-                <a href="mailto:contact@peeljoy.com" class="text-gray-400 hover:text-white">Contact</a>
+                <a
+                  href="mailto:contact@peeljoy.com"
+                  class="text-gray-400 hover:text-white"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
