--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               </li>
               <li>
                 <a
-                  href="mailto:contact@peeljoy.com"
+                  href="mailto:sonofadam612@gmail.com"
                   class="text-gray-400 hover:text-white"
                   >Contact</a
                 >
