--- a/privacy.html
+++ b/privacy.html
@@ -268,9 +268,9 @@
             <p class="mt-2">
               <strong>Email:</strong>
               <a
-                href="mailto:contact@peeljoy.com"
+                href="mailto:sonofadam612@gmail.com"
                 class="text-pink-500 hover:underline"
-                >contact@peeljoy.com</a
+                >sonofadam612@gmail.com</a
               >
             </p>
           </section>
