Add comprehensive SEO: meta tags, robots.txt, sitemap.xml

--- a/index.html
+++ b/index.html
@@ -18,8 +18,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      PeelJoy - Download Icons, 3D Icons, Illustrations & Lottie Animations
+      PeelJoy - Free Icons, 3D Icons, Illustrations & Lottie Animations
     </title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Download free icons, 3D icons, illustrations, and Lottie animations for your projects. High-quality design assets for web, mobile, and graphic design."
+    />
+    <meta
+      name="keywords"
+      content="free icons, 3D icons, illustrations, Lottie animations, design assets, SVG icons, PNG icons, vector graphics, UI design, web design, graphic design, motion graphics"
+    />
+    <meta name="author" content="PeelJoy" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://peeljoy.vercel.app/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://peeljoy.vercel.app/" />
+    <meta
+      property="og:title"
+      content="PeelJoy - Free Icons, 3D Icons, Illustrations & Lottie Animations"
+    />
+    <meta
+      property="og:description"
+      content="Download free icons, 3D icons, illustrations, and Lottie animations for your projects. High-quality design assets for web, mobile, and graphic design."
+    />
+    <meta
+      property="og:image"
+      content="https://peeljoy.vercel.app/og-image.png"
+    />
+    <meta property="og:site_name" content="PeelJoy" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://peeljoy.vercel.app/" />
+    <meta
+      name="twitter:title"
+      content="PeelJoy - Free Icons, 3D Icons, Illustrations & Lottie Animations"
+    />
+    <meta
+      name="twitter:description"
+      content="Download free icons, 3D icons, illustrations, and Lottie animations for your projects."
+    />
+    <meta
+      name="twitter:image"
+      content="https://peeljoy.vercel.app/og-image.png"
+    />
 
     <!-- Favicon -->
     <link
