--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - PeelJoy</title>
 
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="PeelJoy Privacy Policy - Learn how we collect, use, and protect your personal information when you use our free design assets platform."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://peeljoy.vercel.app/privacy.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://peeljoy.vercel.app/privacy.html" />
+    <meta property="og:title" content="Privacy Policy - PeelJoy" />
+    <meta
+      property="og:description"
+      content="Learn how PeelJoy collects, uses, and protects your personal information."
+    />
+    <meta property="og:site_name" content="PeelJoy" />
+
     <!-- Favicon -->
     <link
       rel="icon"
