--- a/terms.html
+++ b/terms.html
@@ -19,6 +19,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms of Service - PeelJoy</title>
 
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="PeelJoy Terms of Service - Read our terms and conditions for using our free icons, 3D icons, illustrations, and Lottie animations platform."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://peeljoy.vercel.app/terms.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://peeljoy.vercel.app/terms.html" />
+    <meta property="og:title" content="Terms of Service - PeelJoy" />
+    <meta
+      property="og:description"
+      content="Read PeelJoy's terms and conditions for using our design assets platform."
+    />
+    <meta property="og:site_name" content="PeelJoy" />
+
     <!-- Favicon -->
     <link
       rel="icon"
