--- a/index.html
+++ b/index.html
@@ -503,6 +503,11 @@
                   >Contact</a
                 >
               </li>
+              <li>
+                <a href="/review.html" class="text-gray-400 hover:text-white"
+                  ><i class="fas fa-star mr-1"></i>Leave a Review</a
+                >
+              </li>
             </ul>
           </div>
         </div>
