Add horizontal ad units (slot 2896765263) to all pages

--- a/terms.html
+++ b/terms.html
@@ -93,6 +93,21 @@
       </div>
     </header>
 
+    <!-- Ad Banner -->
+    <div class="container mx-auto px-4 py-4 max-w-4xl">
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-6372549792429788"
+        data-ad-slot="2896765263"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-12 max-w-4xl">
       <div class="bg-white rounded-xl shadow-lg p-8">
@@ -271,6 +286,21 @@
         </div>
       </div>
     </main>
+
+    <!-- Ad Banner Before Footer -->
+    <div class="container mx-auto px-4 py-4 max-w-4xl">
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-6372549792429788"
+        data-ad-slot="2896765263"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
