--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           class="adsbygoogle"
           style="display: block"
           data-ad-client="ca-pub-6372549792429788"
-          data-ad-slot="auto"
+          data-ad-slot="2896765263"
           data-ad-format="auto"
           data-full-width-responsive="true"
         ></ins>
@@ -443,6 +443,26 @@
         </div>
       </section>
     </main>
+
+    <!-- Ad Banner Before Footer -->
+    <div class="container mx-auto px-4 py-4">
+      <div
+        class="ad-container bg-gray-100 rounded-lg flex items-center justify-center"
+        style="min-height: 90px"
+      >
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-6372549792429788"
+          data-ad-slot="2896765263"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-12">
