--- a/review.html
+++ b/review.html
@@ -139,6 +139,21 @@
       </div>
     </header>
 
+    <!-- Ad Banner -->
+    <div class="max-w-3xl mx-auto px-4 py-4">
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-6372549792429788"
+        data-ad-slot="2896765263"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
     <!-- Main Content -->
     <main class="max-w-3xl mx-auto px-4 py-12">
       <div class="text-center mb-10">
@@ -340,6 +355,21 @@
         </div>
       </div>
     </main>
+
+    <!-- Ad Banner Before Footer -->
+    <div class="max-w-3xl mx-auto px-4 py-4">
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-6372549792429788"
+        data-ad-slot="2896765263"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-16">
