Add contact page and update navigation links

--- a/review.html
+++ b/review.html
@@ -383,6 +383,10 @@
           <a href="/terms.html" class="hover:text-pink-400 transition-colors"
             >Terms of Service</a
           >
+          |
+          <a href="/contact.html" class="hover:text-pink-400 transition-colors"
+            >Contact</a
+          >
         </p>
       </div>
     </footer>
