--- a/index.html
+++ b/index.html
@@ -550,9 +550,7 @@
                 >
               </li>
               <li>
-                <a
-                  href="mailto:sonofadam612@gmail.com"
-                  class="text-gray-400 hover:text-white"
+                <a href="/contact.html" class="text-gray-400 hover:text-white"
                   >Contact</a
                 >
               </li>
