--- a/terms.html
+++ b/terms.html
@@ -88,6 +88,9 @@
             <a href="/terms.html" class="hover:text-gray-200 font-medium"
               >Terms of Service</a
             >
+            <a href="/contact.html" class="hover:text-gray-200 font-medium"
+              >Contact</a
+            >
           </nav>
         </div>
       </div>
@@ -316,6 +319,9 @@
           >
           <a href="/terms.html" class="text-gray-400 hover:text-white"
             >Terms of Service</a
+          >
+          <a href="/contact.html" class="text-gray-400 hover:text-white"
+            >Contact</a
           >
         </div>
         <p class="text-gray-400">&copy; 2025 PeelJoy. All rights reserved.</p>
