--- a/contact.html
+++ b/contact.html
@@ -127,18 +127,24 @@
           Contact Us
         </h1>
         <p class="text-gray-600 text-center mb-8">
-          We'd love to hear from you! Fill out the form below or use our contact information.
+          We'd love to hear from you! Fill out the form below or use our contact
+          information.
         </p>
 
         <!-- Success Message (hidden by default) -->
-        <div id="successMessage" class="hidden mb-8 bg-green-100 border border-green-400 text-green-700 px-6 py-4 rounded-xl text-center">
+        <div
+          id="successMessage"
+          class="hidden mb-8 bg-green-100 border border-green-400 text-green-700 px-6 py-4 rounded-xl text-center"
+        >
           <i class="fas fa-check-circle text-2xl mb-2"></i>
           <h3 class="font-semibold text-lg">Thank you for your message!</h3>
           <p>We'll get back to you within 24-48 hours.</p>
         </div>
 
         <!-- Contact Form -->
-        <div class="bg-gradient-to-br from-pink-50 to-cyan-50 rounded-xl p-6 mb-8">
+        <div
+          class="bg-gradient-to-br from-pink-50 to-cyan-50 rounded-xl p-6 mb-8"
+        >
           <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
             <i class="fas fa-paper-plane text-pink-500 mr-3"></i>
             Send Us a Message
@@ -149,7 +155,11 @@
             method="POST"
           >
             <!-- FormSubmit Configuration -->
-            <input type="hidden" name="_subject" value="New Contact Form Message - PeelJoy" />
+            <input
+              type="hidden"
+              name="_subject"
+              value="New Contact Form Message - PeelJoy"
+            />
             <input type="hidden" name="_captcha" value="true" />
             <input type="hidden" name="_template" value="table" />
             <input
@@ -178,7 +188,8 @@
               <!-- Email -->
               <div>
                 <label class="block text-gray-700 font-medium mb-2" for="email">
-                  <i class="fas fa-envelope mr-2 text-pink-400"></i>Email Address
+                  <i class="fas fa-envelope mr-2 text-pink-400"></i>Email
+                  Address
                 </label>
                 <input
                   type="email"
@@ -207,7 +218,9 @@
                 <option value="Asset Request">Asset Request</option>
                 <option value="Bug Report">Bug Report</option>
                 <option value="Feedback">Feedback</option>
-                <option value="Business/Partnership">Business/Partnership</option>
+                <option value="Business/Partnership">
+                  Business/Partnership
+                </option>
                 <option value="Other">Other</option>
               </select>
             </div>
@@ -410,12 +423,17 @@
       const urlParams = new URLSearchParams(window.location.search);
       if (urlParams.get("success") === "true") {
         document.getElementById("contactForm").style.display = "none";
-        document.getElementById("contactForm").parentElement.style.display = "none";
+        document.getElementById("contactForm").parentElement.style.display =
+          "none";
         document.getElementById("successMessage").classList.remove("hidden");
         // Clean up URL
-        window.history.replaceState({}, document.title, window.location.pathname);
+        window.history.replaceState(
+          {},
+          document.title,
+          window.location.pathname
+        );
         // Scroll to top
-        window.scrollTo({ top: 0, behavior: 'smooth' });
+        window.scrollTo({ top: 0, behavior: "smooth" });
       }
     </script>
   </body>
