Reduce spacing on contact page

--- a/contact.html
+++ b/contact.html
@@ -121,12 +121,12 @@
     </div>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-8 max-w-4xl">
-      <div class="bg-white rounded-2xl shadow-lg p-8">
-        <h1 class="text-4xl font-bold text-gray-800 mb-2 text-center">
+    <main class="container mx-auto px-4 py-4 max-w-4xl">
+      <div class="bg-white rounded-2xl shadow-lg p-6">
+        <h1 class="text-3xl font-bold text-gray-800 mb-2 text-center">
           Contact Us
         </h1>
-        <p class="text-gray-600 text-center mb-8">
+        <p class="text-gray-600 text-center mb-4">
           We'd love to hear from you! Fill out the form below or use our contact
           information.
         </p>
@@ -143,9 +143,9 @@
 
         <!-- Contact Form -->
         <div
-          class="bg-gradient-to-br from-pink-50 to-cyan-50 rounded-xl p-6 mb-8"
+          class="bg-gradient-to-br from-pink-50 to-cyan-50 rounded-xl p-4 mb-6"
         >
-          <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
+          <h2 class="text-xl font-bold text-gray-800 mb-4 flex items-center">
             <i class="fas fa-paper-plane text-pink-500 mr-3"></i>
             Send Us a Message
           </h2>
@@ -252,18 +252,18 @@
         </div>
 
         <!-- Contact Cards -->
-        <div class="grid md:grid-cols-2 gap-6 mb-12">
+        <div class="grid md:grid-cols-2 gap-4 mb-6">
           <!-- Email Card -->
           <div
-            class="contact-card bg-gradient-to-br from-pink-50 to-pink-100 rounded-xl p-6 text-center"
+            class="contact-card bg-gradient-to-br from-pink-50 to-pink-100 rounded-xl p-4 text-center"
           >
             <div
-              class="w-16 h-16 bg-pink-500 rounded-full flex items-center justify-center mx-auto mb-4"
+              class="w-12 h-12 bg-pink-500 rounded-full flex items-center justify-center mx-auto mb-3"
             >
-              <i class="fas fa-envelope text-white text-2xl"></i>
+              <i class="fas fa-envelope text-white text-xl"></i>
             </div>
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">Email Us</h3>
-            <p class="text-gray-600 mb-4">For general inquiries and support</p>
+            <h3 class="text-lg font-semibold text-gray-800 mb-1">Email Us</h3>
+            <p class="text-gray-600 text-sm mb-2">For general inquiries and support</p>
             <a
               href="mailto:sonofadam612@gmail.com"
               class="inline-block bg-pink-500 text-white px-6 py-2 rounded-full hover:bg-pink-600 transition-colors"
@@ -274,17 +274,17 @@
 
           <!-- Response Time Card -->
           <div
-            class="contact-card bg-gradient-to-br from-cyan-50 to-cyan-100 rounded-xl p-6 text-center"
+            class="contact-card bg-gradient-to-br from-cyan-50 to-cyan-100 rounded-xl p-4 text-center"
           >
             <div
-              class="w-16 h-16 bg-cyan-500 rounded-full flex items-center justify-center mx-auto mb-4"
+              class="w-12 h-12 bg-cyan-500 rounded-full flex items-center justify-center mx-auto mb-3"
             >
-              <i class="fas fa-clock text-white text-2xl"></i>
+              <i class="fas fa-clock text-white text-xl"></i>
             </div>
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">
+            <h3 class="text-lg font-semibold text-gray-800 mb-1">
               Response Time
             </h3>
-            <p class="text-gray-600 mb-4">We typically respond within</p>
+            <p class="text-gray-600 text-sm mb-2">We typically respond within</p>
             <span
               class="inline-block bg-cyan-500 text-white px-6 py-2 rounded-full"
             >
@@ -294,8 +294,8 @@
         </div>
 
         <!-- FAQ Section -->
-        <section class="mb-8">
-          <h2 class="text-2xl font-bold text-gray-800 mb-6 flex items-center">
+        <section class="mb-4">
+          <h2 class="text-xl font-bold text-gray-800 mb-4 flex items-center">
             <i class="fas fa-question-circle text-pink-500 mr-3"></i>
             Frequently Asked Questions
           </h2>
@@ -396,7 +396,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-8 mt-12">
+    <footer class="bg-gray-800 text-white py-6 mt-6">
       <div class="container mx-auto px-4 text-center">
         <div class="flex items-center justify-center space-x-2 mb-4">
           <i class="fas fa-layer-group text-2xl"></i>
