Update contact page formatting

--- a/contact.html
+++ b/contact.html
@@ -263,7 +263,9 @@
               <i class="fas fa-envelope text-white text-xl"></i>
             </div>
             <h3 class="text-lg font-semibold text-gray-800 mb-1">Email Us</h3>
-            <p class="text-gray-600 text-sm mb-2">For general inquiries and support</p>
+            <p class="text-gray-600 text-sm mb-2">
+              For general inquiries and support
+            </p>
             <a
               href="mailto:sonofadam612@gmail.com"
               class="inline-block bg-pink-500 text-white px-6 py-2 rounded-full hover:bg-pink-600 transition-colors"
@@ -284,7 +286,9 @@
             <h3 class="text-lg font-semibold text-gray-800 mb-1">
               Response Time
             </h3>
-            <p class="text-gray-600 text-sm mb-2">We typically respond within</p>
+            <p class="text-gray-600 text-sm mb-2">
+              We typically respond within
+            </p>
             <span
               class="inline-block bg-cyan-500 text-white px-6 py-2 rounded-full"
             >
