Update footer social links with real profiles (GitHub, X, LinkedIn)

--- a/index.html
+++ b/index.html
@@ -478,14 +478,14 @@
               animations for your projects.
             </p>
             <div class="flex space-x-4 mt-4">
-              <a href="#" class="text-gray-400 hover:text-white"
+              <a href="https://github.com/DocHoax" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" class="text-gray-400 hover:text-white"
-                ><i class="fab fa-twitter"></i
+              <a href="https://x.com/MuhdOlawale" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
+                ><i class="fab fa-x-twitter"></i
               ></a>
-              <a href="#" class="text-gray-400 hover:text-white"
-                ><i class="fab fa-discord"></i
+              <a href="https://www.linkedin.com/in/muhammadoadam/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
+                ><i class="fab fa-linkedin"></i
               ></a>
             </div>
           </div>
