--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -478,13 +478,25 @@
               animations for your projects.
             </p>
             <div class="flex space-x-4 mt-4">
-              <a href="https://github.com/DocHoax" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
+              <a
+                href="https://github.com/DocHoax"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-gray-400 hover:text-white"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://x.com/MuhdOlawale" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
+              <a
+                href="https://x.com/MuhdOlawale"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-gray-400 hover:text-white"
                 ><i class="fab fa-x-twitter"></i
               ></a>
-              <a href="https://www.linkedin.com/in/muhammadoadam/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white"
+              <a
+                href="https://www.linkedin.com/in/muhammadoadam/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-gray-400 hover:text-white"
                 ><i class="fab fa-linkedin"></i
               ></a>
             </div>
