Add About Us page with mission, features, and creator info

--- a/index.html
+++ b/index.html
@@ -562,6 +562,11 @@
                 >
               </li>
               <li>
+                <a href="/about.html" class="text-gray-400 hover:text-white"
+                  >About Us</a
+                >
+              </li>
+              <li>
                 <a href="/contact.html" class="text-gray-400 hover:text-white"
                   >Contact</a
                 >
