Update all URLs to peeljoy.tech domain

--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
       content="Learn about PeelJoy - Your go-to platform for free high-quality icons, 3D icons, illustrations, and Lottie animations for designers and developers."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/about.html" />
+    <link rel="canonical" href="https://peeljoy.tech/about.html" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/about.html" />
+    <meta property="og:url" content="https://peeljoy.tech/about.html" />
     <meta property="og:title" content="About Us - PeelJoy" />
     <meta
       property="og:description"
