--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     />
     <meta name="author" content="PeelJoy" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/" />
+    <link rel="canonical" href="https://peeljoy.tech/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/" />
+    <meta property="og:url" content="https://peeljoy.tech/" />
     <meta
       property="og:title"
       content="PeelJoy - Free Icons, 3D Icons, Illustrations & Lottie Animations"
@@ -47,13 +47,13 @@
     />
     <meta
       property="og:image"
-      content="https://peeljoy.vercel.app/og-image.png"
+      content="https://peeljoy.tech/og-image.png"
     />
     <meta property="og:site_name" content="PeelJoy" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://peeljoy.vercel.app/" />
+    <meta name="twitter:url" content="https://peeljoy.tech/" />
     <meta
       name="twitter:title"
       content="PeelJoy - Free Icons, 3D Icons, Illustrations & Lottie Animations"
@@ -64,7 +64,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://peeljoy.vercel.app/og-image.png"
+      content="https://peeljoy.tech/og-image.png"
     />
 
     <!-- Favicon -->
