--- a/review.html
+++ b/review.html
@@ -25,11 +25,11 @@
       content="Share your feedback about PeelJoy. We'd love to hear your thoughts on our free icons, 3D icons, illustrations, and Lottie animations platform."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/review.html" />
+    <link rel="canonical" href="https://peeljoy.tech/review.html" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/review.html" />
+    <meta property="og:url" content="https://peeljoy.tech/review.html" />
     <meta property="og:title" content="Leave a Review - PeelJoy" />
     <meta
       property="og:description"
@@ -179,7 +179,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://peeljoy.vercel.app/review.html?success=true"
+            value="https://peeljoy.tech/review.html?success=true"
           />
           <input type="text" name="_honey" style="display: none" />
 
