--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
       content="Contact PeelJoy - Get in touch with us for questions, feedback, or support regarding our free design assets platform."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/contact.html" />
+    <link rel="canonical" href="https://peeljoy.tech/contact.html" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/contact.html" />
+    <meta property="og:url" content="https://peeljoy.tech/contact.html" />
     <meta property="og:title" content="Contact Us - PeelJoy" />
     <meta
       property="og:description"
@@ -165,7 +165,7 @@
             <input
               type="hidden"
               name="_next"
-              value="https://peeljoy.vercel.app/contact.html?success=true"
+              value="https://peeljoy.tech/contact.html?success=true"
             />
             <input type="text" name="_honey" style="display: none" />
 
