--- a/privacy.html
+++ b/privacy.html
@@ -25,11 +25,11 @@
       content="PeelJoy Privacy Policy - Learn how we collect, use, and protect your personal information when you use our free design assets platform."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/privacy.html" />
+    <link rel="canonical" href="https://peeljoy.tech/privacy.html" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/privacy.html" />
+    <meta property="og:url" content="https://peeljoy.tech/privacy.html" />
     <meta property="og:title" content="Privacy Policy - PeelJoy" />
     <meta
       property="og:description"
