--- a/terms.html
+++ b/terms.html
@@ -25,11 +25,11 @@
       content="PeelJoy Terms of Service - Read our terms and conditions for using our free icons, 3D icons, illustrations, and Lottie animations platform."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://peeljoy.vercel.app/terms.html" />
+    <link rel="canonical" href="https://peeljoy.tech/terms.html" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://peeljoy.vercel.app/terms.html" />
+    <meta property="og:url" content="https://peeljoy.tech/terms.html" />
     <meta property="og:title" content="Terms of Service - PeelJoy" />
     <meta
       property="og:description"
