Add Adsterra native ads alongside AdSense

--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
       property="og:description"
       content="Download free icons, 3D icons, illustrations, and Lottie animations for your projects. High-quality design assets for web, mobile, and graphic design."
     />
-    <meta
-      property="og:image"
-      content="https://peeljoy.tech/og-image.png"
-    />
+    <meta property="og:image" content="https://peeljoy.tech/og-image.png" />
     <meta property="og:site_name" content="PeelJoy" />
 
     <!-- Twitter -->
@@ -62,10 +59,7 @@
       name="twitter:description"
       content="Download free icons, 3D icons, illustrations, and Lottie animations for your projects."
     />
-    <meta
-      name="twitter:image"
-      content="https://peeljoy.tech/og-image.png"
-    />
+    <meta name="twitter:image" content="https://peeljoy.tech/og-image.png" />
 
     <!-- Favicon -->
     <link
@@ -319,6 +313,19 @@
 
     <!-- Ad Banner -->
     <div class="container mx-auto px-4 py-4">
+      <!-- Adsterra Ad -->
+      <div
+        class="ad-container bg-gray-100 rounded-lg flex items-center justify-center mb-4"
+        style="min-height: 90px"
+      >
+        <script
+          async="async"
+          data-cfasync="false"
+          src="//pl28183064.effectivegatecpm.com/8be7fa8678ea2331f2137cc4c8d73c86/invoke.js"
+        ></script>
+        <div id="container-8be7fa8678ea2331f2137cc4c8d73c86"></div>
+      </div>
+      <!-- AdSense Ad -->
       <div
         class="ad-container bg-gray-100 rounded-lg flex items-center justify-center"
         style="min-height: 90px"
