Add Adsterra social bar ads to all pages

--- a/about.html
+++ b/about.html
@@ -87,6 +87,12 @@
         transform: scale(1.05);
       }
     </style>
+
+    <!-- Adsterra Social Bar -->
+    <script
+      type="text/javascript"
+      src="//pl28183359.effectivegatecpm.com/42/19/c7/4219c71553eee91b2ef5f236ce5b8713.js"
+    ></script>
   </head>
   <body>
     <!-- Header -->
