--- a/terms.html
+++ b/terms.html
@@ -63,6 +63,12 @@
         background: linear-gradient(135deg, #f582ae 0%, #8bd3dd 100%);
       }
     </style>
+
+    <!-- Adsterra Social Bar -->
+    <script
+      type="text/javascript"
+      src="//pl28183359.effectivegatecpm.com/42/19/c7/4219c71553eee91b2ef5f236ce5b8713.js"
+    ></script>
   </head>
   <body>
     <!-- Header -->
