--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-CP5V1VKX04"
+      src="https://www.googletagmanager.com/gtag/js?id=G-M15XWMZJZ8"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -27,7 +27,7 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-CP5V1VKX04");
+      gtag("config", "G-M15XWMZJZ8");
     </script>
 
     <meta charset="UTF-8" />
