--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,13 @@
       gtag("config", "G-M15XWMZJZ8");
     </script>
 
+    <!-- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6372549792429788"
+      crossorigin="anonymous"
+    ></script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - PeelJoy</title>
